# search_engine

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  config.json  main.cpp  requests.json
2/: requests.json
forGTest/: CMakeLists.txt  main.cpp
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt
